# ddeapp-fastapi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .{demo}.env  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  service.py  single.Dockerfile
.github/workflows/: publish.yml  tests.yml
app/: app.py  dependencies.py  logger.py  models.py  security.py  tasks.py  utils.py
app/config/: settings.py
app/routes/: __init__.py
app/routes/initial/: routes.py  tasks.py
scripts/: runserver.bat  setup.bat  teardown.bat
tests/: conftest.py  test_app.py  test_tasks.py
tests/route_initial/: test_routes.py  test_tasks.py
