[project]
name = "ddeapp-fastapi"
description = "Data Framework API App that Routing On-Premise API with FastAPI"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [{ name = "ddeutils", email = "korawich.anu@gmail.com" }]
keywords = ['fastapi', 'data application']
classifiers = [
    "Topic :: Utilities",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9.13"
dependencies = [
    "fastapi==0.110.3",
]

[tool.shelf.version]
version = "./app/__init__.py"
changelog = "CHANGELOG.md"

[tool.shelf.git]
commit_prefix_force_fix = true
commit_prefix = [
    ["initial", "Features", ":bulb:"],
]
